// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionIconToggle should render a button 1`] = `
<Tooltip
  placement="top"
  title="Click me, I'm inactive"
>
  <Toggle
    className="my-icon-toggle tc-icon-toggle theme-tc-icon-toggle"
    data-feature="action.feature"
    icon="talend-panel-opener-right"
    id="my-inactive-action"
    isActive={false}
  >
    Click me, I'm inactive
  </Toggle>
</Tooltip>
`;

exports[`ActionIconToggle should render an active button 1`] = `
<Tooltip
  placement="top"
  title="Click me, I'm inactive"
>
  <Toggle
    className="my-icon-toggle tc-icon-toggle theme-tc-icon-toggle active"
    data-feature="action.feature"
    icon="talend-panel-opener-right"
    id="my-inactive-action"
    isActive={true}
  >
    Click me, I'm inactive
  </Toggle>
</Tooltip>
`;
